ingress/routes/argo-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argo-server
  namespace: argo
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argo.home.kenchlightyear.com`)
      kind: Rule
      services:
        - name: argo-workflows-server
          port: 2746
  tls:
    secretName: argo-server-tls
