ingress/routes/grafana-ingressroute.yaml
---
# IngressRoute for Grafana
# → https://grafana.home.kenchlightyear.com → prometheus-stack-grafana in monitoring

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.home.kenchlightyear.com`)
      kind: Rule
      services:
        - name: prometheus-stack-grafana
          port: 80
  tls:
    secretName: home-kenchlightyear-tls
