ingress/routes/tekton-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tekton.home.kenchlightyear.com`)
      kind: Rule
      services:
        - name: tekton-dashboard
          port: 9097
  tls:
    secretName: cloudflare-api-token-tls # Assuming the cert-manager wildcard is used or generated
